add swaggo to vin code checker
