# models/request.go
@@ -18,3 +18,18 @@ type RequestLogin struct {
 	Email    string `json:"email" gorm:"not null;unique" binding:"required"`
 	Password string `json:"password" gorm:"not null;min:8" binding:"required"`
 }
+
+type VINRequest struct {
+	VIN string `json:"vin_code" binding:"required"`
+}
+
+type VINResponse struct {
+	VIN          string `json:"vin"`
+	Country      string `json:"country"`
+	Manufacturer string `json:"manufacturer"`
+	Region       string `json:"region"`
+	WMI          string `json:"wmi"`
+	VDS          string `json:"vds"`
+	VIS          string `json:"vis"`
+	Years        []int  `json:"years"`
+}
